--- a/package.json
+++ b/package.json
@@ -29,16 +29,20 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-jss": "^10.0.0",
     "babel-loader": "^9.2.1",
-    "copy-webpack-plugin": "^9.0.1",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.2",
     "glob": "^7.1.6",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.5.0",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2 ",
+    "style-loader": "^4.0.0",
     "ts-jest": "^29.1.0",
-    "ts-loader": "^8.0.0",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.0.4",
-    "webpack": "^5.94.0",
-    "webpack-cli": "^4.0.0",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4",
     "webpack-merge": "^5.0.0"
   }
 }
