Search for and display results for search
This allows for search based on selection or manual entry. Splits results into a primary match if an exact code is found.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,6 +4,7 @@
   "description": "Search and display HS Code information",
   "version": "1.0",
   "permissions": ["contextMenus", "storage", "sidePanel"],
+  "host_permissions": ["https://hts.usitc.gov/*"],
   "action": {
     "default_popup": "html/sidepanel.html",
     "default_icon": {
