--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "url": "https://github.com/alex-ekstrom-flexport/harmonized-system-extension.git"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/material": "^6.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jss": "^10.10.0"
