--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "watch": "webpack --config webpack/webpack.dev.js --watch",
+    "dev": "webpack --config webpack/webpack.dev.js",
     "build": "webpack --config webpack/webpack.prod.js",
+    "server": "node src/server/server.js",
     "clean": "rimraf dist",
     "test": "npx jest",
     "style": "prettier --write \"src/**/*.{ts,tsx}\""
@@ -18,6 +20,7 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@mui/material": "^6.1.9",
+    "axios": "^1.7.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jss": "^10.10.0"
@@ -33,7 +36,10 @@
     "@types/react-jss": "^10.0.0",
     "babel-loader": "^9.2.1",
     "copy-webpack-plugin": "^12.0.2",
+    "cors": "^2.8.5",
     "css-loader": "^7.1.2",
+    "dotenv": "^16.4.6",
+    "express": "^4.21.1",
     "glob": "^7.1.6",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.5.0",
