--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
     "axios": "^1.7.8",
+    "country-code-lookup": "^0.1.3",
     "country-list-js": "^3.1.8",
+    "country-to-iso": "^1.5.1",
     "openai": "^4.75.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
